--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-service": "~4.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "csv-parse": "^4.9.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "node-sass": "^4.14.1",
