--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "core-js": "^3.6.4",
+    "date-fns": "^2.15.0",
     "express": "^4.17.1",
     "puppeteer": "^3.0.1",
     "puppeteer-extra": "^3.1.9",
