--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "./database.sqlite3",
+    "storage": "database.sqlite3",
     "logging": false
   },
   "test": {
@@ -10,7 +10,7 @@
   },
   "production": {
     "dialect": "sqlite",
-    "storage": "./database.sqlite3",
+    "storage": "database.sqlite3",
     "logging": false
   }
 }
