--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+/config/config.json
 
 # local env files
 .env.local
@@ -21,3 +22,4 @@ yarn-error.log*
 *.sw?
 *.sqlite3
 
+config/config.json
