--- a/package.json
+++ b/package.json
@@ -10,19 +10,14 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "core-js": "^3.6.4",
-    "date-fns": "^2.15.0",
     "express": "^4.17.1",
-    "puppeteer": "^3.0.1",
-    "puppeteer-extra": "^3.1.9",
-    "puppeteer-extra-plugin-stealth": "^2.4.9",
     "sequelize": "^5.21.7",
-    "sqlite3": "^4.1.1",
-    "user-agents": "^1.0.559"
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "csv-parse": "^4.9.0",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.1",
     "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
