--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-prettier": "^3.1.1",
     "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
