--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scrapers"]
 	path = scrapers
-	url = git@github.com:kokkoniemi/mapping-study-scrapers.git
+	url = https://github.com/kokkoniemi/mapping-study-scrapers.git
