--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "migrate": "node_modules/.bin/sequelize db:migrate"
   },
   "dependencies": {
-    "chalk": "^5.0.0",
-    "core-js": "^3.21.0",
-    "express": "^4.17.2",
-    "sequelize": "^6.16.1",
-    "sqlite3": "^4.2.0"
+    "chalk": "^5.3.0",
+    "core-js": "^3.37.0",
+    "express": "^4.19.2",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.9.0",
-    "sequelize-cli": "^6.4.1"
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
+    "sequelize-cli": "^6.6.2"
   }
 }
