--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
-  "name": "scholar-scraper",
+  "name": "mapping-tool",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node server.js",
     "migrate": "node_modules/.bin/sequelize db:migrate"
+  },
+  "bin": "server.js",
+  "pkg": {
+    "assets": [
+      "./public/**/*"
+    ],
+    "scripts": [
+      "./node_modules/*",
+      "./routes/*",
+      "./models/*",
+      "./migrations/*"
+    ],
+    "targets": [
+      "node18-linux-x64",
+      "node18-macos-arm64",
+      "node18-win-x64"
+    ],
+    "compress": "GZip"
   },
   "dependencies": {
     "chalk": "^5.3.0",
