removed binary from source

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ yarn-error.log*
 
 config/config.json
 mapping-tool-linux-x64
+mapping-tool-linux-arm64
 mapping-tool-macos-arm64
 mapping-tool-win-x64.exe
